Added new CSS files

--- a/public_html/css/careers/careers.css
+++ b/public_html/css/careers/careers.css
@@ -1,2 +1,12 @@
+/* line 1, /Users/SamCasey/Documents/_Clients/Ultradia/Website/old/css/careers.scss */
+.hero-content {
+  position: relative;
+  /* positioning will be explained in a resource */
+  min-height: 600px;
+  /* hero content element must be _at least_ 600 pixels */
+  background-image: url(../assets/images/bloc_jams_bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover; }
 
 /*# sourceMappingURL=careers.css.map */
