--- a/public_html/css/fonts.css
+++ b/public_html/css/fonts.css
@@ -36,27 +36,27 @@
   
 @font-face {
 	font-family: 'FrutigerLTStd-Light';
-	src: url('/webfonts/2D963C_0_0.eot');
-	src: url('/webfonts/2D963C_0_0.eot?#iefix') format('embedded-opentype'),
-			 url('/webfonts/2D963C_0_0.woff2') format('woff2'),
-		   url('/webfonts/2D963C_0_0.woff') format('woff'),
-		   url('/webfonts/2D963C_0_0.ttf') format('truetype');}
+	src: url('../webfonts/2D963C_0_0.eot');
+	src: url('../webfonts/2D963C_0_0.eot?#iefix') format('embedded-opentype'),
+			 url('../webfonts/2D963C_0_0.woff2') format('woff2'),
+		   url('../webfonts/2D963C_0_0.woff') format('woff'),
+		   url('../webfonts/2D963C_0_0.ttf') format('truetype');}
  
   
 @font-face {
 	font-family: 'FrutigerLT-Bold';
-	src: url('/webfonts/2D963C_1_0.eot');
-	src: url('/webfonts/2D963C_1_0.eot?#iefix') format('embedded-opentype'),
-		   url('/webfonts/2D963C_1_0.woff2') format('woff2'),
-			 url('/webfonts/2D963C_1_0.woff') format('woff'),
-		   url('/webfonts/2D963C_1_0.ttf') format('truetype');}
+	src: url('../webfonts/2D963C_1_0.eot');
+	src: url('../webfonts/2D963C_1_0.eot?#iefix') format('embedded-opentype'),
+		   url('../webfonts/2D963C_1_0.woff2') format('woff2'),
+			 url('../webfonts/2D963C_1_0.woff') format('woff'),
+		   url('../webfonts/2D963C_1_0.ttf') format('truetype');}
  
   
 @font-face {
 	font-family: 'FrutigerLTStd-Roman';
-	src: url('/webfonts/2D963C_2_0.eot');
-	src: url('/webfonts/2D963C_2_0.eot?#iefix') format('embedded-opentype'),
-			 url('/webfonts/2D963C_2_0.woff2') format('woff2'),
-		 	 url('/webfonts/2D963C_2_0.woff') format('woff'),
-			 url('/webfonts/2D963C_2_0.ttf') format('truetype');}
+	src: url('../webfonts/2D963C_2_0.eot');
+	src: url('../webfonts/2D963C_2_0.eot?#iefix') format('embedded-opentype'),
+			 url('../webfonts/2D963C_2_0.woff2') format('woff2'),
+		 	 url('../webfonts/2D963C_2_0.woff') format('woff'),
+			 url('../webfonts/2D963C_2_0.ttf') format('truetype');}
  
