--- a/public_html/css/careers/careers.scss
+++ b/public_html/css/careers/careers.scss
@@ -1,7 +1,7 @@
 .hero-content {
 	position: relative; /* positioning will be explained in a resource */
 	min-height: 600px; /* hero content element must be _at least_ 600 pixels */
-	background-image: url(../assets/images/bloc_jams_bg.jpg);
+	background-image: url(../../img/bg-tile.jpg);
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
