--- a/css/careers/global.scss
+++ b/css/careers/global.scss
@@ -1,3 +1,13 @@
+*, *:before, *:after, hr, hr:before, hr:after, input[type="search"], input[type="search"]:before, input[type="search"]:after {
+    box-sizing: border-box;
+}
+
+body {
+    height: 100%;
+    width: 100%;
+    background-color: #fff;
+}
+
 p, h1, h2, h3, h4, h5, h6 {
     font-family: $regular;
 }
