--- a/css/careers/main.scss
+++ b/css/careers/main.scss
@@ -11,8 +11,7 @@
     .hero-title {
         position: relative;
         top: 0;
-        margin-left: auto;
-        margin-right: auto;
+        margin: 0 auto;
         width: 510px;
         h1 {
             //-webkit-transform: translateY(-50%);
@@ -40,7 +39,6 @@
 
 #traits {
     width: 100%;
-    height: 130px;
     display: block;
     background-color: #EFEBEA;
     overflow: hidden;
@@ -53,6 +51,7 @@
             position: relative;
             float: left;
             padding-right: 26px;
+            margin-top: 30px;
             &:last-child {
                 padding-right: 0;
             }
@@ -65,13 +64,13 @@
             &:nth-child(2) img {
                 margin-top: 0;
             }
-            &:last-child img {
+            &:nth-child(3) img {
                 width: 76px;
                 height: auto;
-                margin-top: 2px;
+                margin: 2px 25px 30px 0;
             }
             .trait-text-container {
-                width: 100%;
+                width: 90%;
                 .trait-title {
                     font: 22px/24px $regular;
                     color: $ult-secondary;
@@ -87,6 +86,7 @@
 
 #about-us {
     .sec-container {
+        margin: 80px auto;
         .about-title {
             font: 36px $regular;
         }
@@ -116,6 +116,9 @@
 #openings {
     .sec-container{
         .row {
+            &:first-child {
+                margin-top: 35px;
+            }
             &:nth-child(3n+3) {
                 margin-top: 50px;
             }
@@ -145,6 +148,9 @@
                         outline: 0;
                     }
                 }
+            }
+            &:last-child {
+                margin-bottom: 60px;
             }
         }
     }
