removed html from position.html that was transfered from index

--- a/css/careers/position.css
+++ b/css/careers/position.css
@@ -25,4 +25,8 @@
         float: left;
         margin: 1px 4px 0 0; }
 
+.job-description {
+  height: 300px;
+  width: 100%; }
+
 /*# sourceMappingURL=position.css.map */
