--- a/css/careers/careers.css
+++ b/css/careers/careers.css
@@ -222,33 +222,32 @@ footer {
     footer .sec-container .shrink:first-child {
       text-align: left;
       padding-left: 0; }
-  footer span.copyright {
-    text-transform: none;
-    font-family: 'FrutigerLTStd-Roman', Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-    line-height: 40px;
-    color: #fff; }
+      footer .sec-container .shrink:first-child .copyright {
+        text-transform: none;
+        font-family: 'FrutigerLTStd-Roman', Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+        line-height: 40px;
+        color: #fff; }
+    footer .sec-container .social-buttons {
+      margin-bottom: 0; }
+      footer .sec-container .social-buttons li a {
+        display: block;
+        width: 40px;
+        height: 40px;
+        border-radius: 100%;
+        font-size: 20px;
+        line-height: 40px;
+        outline: 0;
+        color: #444;
+        background-color: #fff;
+        -webkit-transition: all .3s;
+        -moz-transition: all .3s;
+        transition: all .3s; }
+        footer .sec-container .social-buttons li a:hover, footer .sec-container .social-buttons li a:focus, footer .sec-container .social-buttons li a:active {
+          background-color: #F84B00; }
   footer ul .quicklinks {
     margin-bottom: 0;
     text-transform: none;
     font-family: 'FrutigerLTStd-Roman', Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 40px; }
-
-.social-buttons {
-  margin-bottom: 0; }
-  .social-buttons li a {
-    display: block;
-    width: 40px;
-    height: 40px;
-    border-radius: 100%;
-    font-size: 20px;
-    line-height: 40px;
-    outline: 0;
-    color: #444;
-    background-color: #fff;
-    -webkit-transition: all .3s;
-    -moz-transition: all .3s;
-    transition: all .3s; }
-    .social-buttons li a:hover, .social-buttons li a:focus, .social-buttons li a:active {
-      background-color: #F84B00; }
 
 /*# sourceMappingURL=careers.css.map */
