--- a/css/careers/position.css
+++ b/css/careers/position.css
@@ -1,21 +1,21 @@
-#hero-content {
+#positionTmpl #hero-content {
   background: linear-gradient(rgba(50, 50, 50, 0.35) 0%, rgba(50, 50, 50, 0.35) 100%), url(../../img/careers-android-dev-header.jpg), no-repeat;
   background-size: cover; }
-  #hero-content .sec-container {
+  #positionTmpl #hero-content .sec-container {
     position: relative; }
-    #hero-content .sec-container .hero-title {
+    #positionTmpl #hero-content .sec-container .hero-title {
       width: 600px; }
-      #hero-content .sec-container .hero-title h1 {
+      #positionTmpl #hero-content .sec-container .hero-title h1 {
         margin-top: 330px;
         font-size: 40px; }
-    #hero-content .sec-container .back-btn
+    #positionTmpl #hero-content .sec-container .back-btn
     a {
       position: absolute;
       bottom: 4px;
       left: 0;
       color: #fff;
-      font: 20px; }
-      #hero-content .sec-container .back-btn
+      font-size: 20px; }
+      #positionTmpl #hero-content .sec-container .back-btn
       a:before {
         content: "";
         height: 16px;
@@ -24,8 +24,7 @@
         background-size: contain;
         float: left;
         margin: 1px 4px 0 0; }
-
-.job-description {
+#positionTmpl .job-description {
   height: 300px;
   width: 100%; }
 
