--- a/css/careers/position.css
+++ b/css/careers/position.css
@@ -13,8 +13,7 @@
       position: absolute;
       bottom: 4px;
       left: 0;
-      color: #fff;
-      font-size: 20px; }
+      color: #fff; }
       #positionTmpl #hero-content .sec-container .back-btn
       a:before {
         content: "";
