stying to position template

--- a/css/careers/position.css
+++ b/css/careers/position.css
@@ -1,6 +1,7 @@
 #positionTmpl #hero-content {
   background: linear-gradient(rgba(50, 50, 50, 0.35) 0%, rgba(50, 50, 50, 0.35) 100%), url(../../img/careers-android-dev-header.jpg), no-repeat;
-  background-size: cover; }
+  background-size: cover;
+  height: 400px; }
   #positionTmpl #hero-content .sec-container {
     position: relative; }
     #positionTmpl #hero-content .sec-container .hero-title {
