--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -2,6 +2,7 @@
     #hero-content {
         background: linear-gradient(rgba(50, 50, 50, .35) 0%, rgba(50, 50, 50, .35) 100%), url(../../img/careers-android-dev-header.jpg), no-repeat;
         background-size: cover;
+        height: 400px;
         .sec-container {
             position: relative;
             .hero-title {
