stying to position template

--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -1,5 +1,6 @@
 #positionTmpl {
     #hero-content {
+        background: linear-gradient(rgba(50, 50, 50, .35) 0%, rgba(50, 50, 50, .35) 100%), no-repeat;
         background-size: cover;
         height: 400px;
         .sec-container {
