--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -1,6 +1,6 @@
 #positionTmpl {
     #hero-content {
-        background-size: cover;
+        background-size: cover !important;
         height: 400px;
         .sec-container {
             position: relative;
