--- a/css/careers/careers.css
+++ b/css/careers/careers.css
@@ -215,7 +215,10 @@ footer {
   padding: 25px 0 20px;
   text-align: center;
   background-color: #444;
-  overflow: hidden; }
+  overflow: hidden;
+  position: absolute;
+  bottom: 0;
+  left: 0; }
   footer .sec-container {
     margin-top: 0;
     margin-bottom: 0; }
