--- a/css/careers/main.scss
+++ b/css/careers/main.scss
@@ -162,6 +162,9 @@ footer {
     text-align: center;
     background-color: $ult-secondary;
     overflow: hidden;
+    position:absolute;
+    bottom:0;
+    left:0;
     .sec-container {
         margin-top: 0;
         margin-bottom: 0;
