--- a/css/careers/careers.css
+++ b/css/careers/careers.css
@@ -216,9 +216,11 @@ footer {
   text-align: center;
   background-color: #444;
   overflow: hidden;
-  position: absolute;
-  bottom: 0;
-  left: 0; }
+  position: fixed;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px; }
   footer .sec-container {
     margin-top: 0;
     margin-bottom: 0; }
