stying to position template

--- a/css/careers/position.css
+++ b/css/careers/position.css
@@ -26,5 +26,7 @@
 #positionTmpl .job-description {
   height: 300px;
   width: 100%; }
+  #positionTmpl .job-description .sec-container {
+    margin-bottom: 115px; }
 
 /*# sourceMappingURL=position.css.map */
