--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -33,5 +33,8 @@
     .job-description {
         height: 300px;
         width: 100%;
+        .sec-container {
+            margin-bottom: 115px;
+        }
     }
 }
