--- a/css/careers/careers.css
+++ b/css/careers/careers.css
@@ -215,12 +215,7 @@ footer {
   padding: 25px 0 20px;
   text-align: center;
   background-color: #444;
-  overflow: hidden;
-  position: fixed;
-  bottom: 0px;
-  left: 0px;
-  right: 0px;
-  margin-bottom: 0px; }
+  overflow: hidden; }
   footer .sec-container {
     margin-top: 0;
     margin-bottom: 0; }
