--- a/css/careers/main.scss
+++ b/css/careers/main.scss
@@ -162,11 +162,11 @@ footer {
     text-align: center;
     background-color: $ult-secondary;
     overflow: hidden;
-    position: fixed;
-    bottom:0px;
-    left:0px;
-    right:0px;
-    margin-bottom:0px;
+    //position: fixed;
+    //bottom:0px;
+    //left:0px;
+    //right:0px;
+    //margin-bottom:0px;
     .sec-container {
         margin-top: 0;
         margin-bottom: 0;
