stying to position template

--- a/css/careers/position.css
+++ b/css/careers/position.css
@@ -25,5 +25,7 @@
         margin: 1px 4px 0 0; }
 #positionTmpl .job-description {
   width: 100%; }
+  #positionTmpl .job-description .sec-container {
+    width: 900px; }
 
 /*# sourceMappingURL=position.css.map */
