--- a/css/careers/careers.css
+++ b/css/careers/careers.css
@@ -9,7 +9,7 @@ body {
   width: 100%;
   background-color: #fff; }
 
-p, h1, h2, h3, h4, h5, h6 {
+p, h1, h2, h3, h4, h5, h6, li {
   font-family: FrutigerLTStd-Roman; }
 
 .sec-container {
