--- a/css/careers/global.scss
+++ b/css/careers/global.scss
@@ -19,7 +19,7 @@ body {
     background-color: #fff;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
+p, h1, h2, h3, h4, h5, h6, li {
     font-family: $regular;
 }
 
