--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -32,6 +32,7 @@
 
     .job-description {
         width: 100%;
+        font: 16px/1.8;
         .sec-container {
             width: 900px;
         }
