stying to position template

--- a/css/careers/position.css
+++ b/css/careers/position.css
@@ -25,7 +25,7 @@
         margin: 1px 4px 0 0; }
 #positionTmpl .job-description {
   width: 100%;
-  font: 16px/1.8; }
+  font: 16px/18px; }
   #positionTmpl .job-description .sec-container {
     width: 900px; }
 
