--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -32,7 +32,7 @@
 
     .job-description {
         width: 100%;
-        font: 16px/1.8;
+        font: 16px/18px;
         .sec-container {
             width: 900px;
         }
