--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -34,7 +34,7 @@
         width: 100%;
         .sec-container {
             width: 900px;
-            font: 16px/18px;
+            font-size: 16px/18px;
         }
     }
 }
