stying to position template

--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -34,7 +34,8 @@
         width: 100%;
         .sec-container {
             width: 900px;
-            font-size: 16px/18px;
+            font-size: 16px;
+            line-height: 18px;
         }
     }
 }
