--- a/css/careers/position.css
+++ b/css/careers/position.css
@@ -27,6 +27,7 @@
   width: 100%; }
   #positionTmpl .job-description .sec-container {
     width: 900px;
-    font-size: 16px/18px; }
+    font-size: 16px;
+    line-height: 18px; }
 
 /*# sourceMappingURL=position.css.map */
