--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -34,8 +34,7 @@
         width: 100%;
         .sec-container {
             width: 900px;
-            font-size: 16px;
-            line-height: 18px;
+            font: 16px/24px $light;
         }
     }
 }
