stying to position template

--- a/css/careers/position.css
+++ b/css/careers/position.css
@@ -27,6 +27,6 @@
   width: 100%; }
   #positionTmpl .job-description .sec-container {
     width: 900px;
-    font: 16px/24px sans-serif; }
+    font: 16px/24px FrutigerLTStd-Light; }
 
 /*# sourceMappingURL=position.css.map */
