--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -1,3 +1,5 @@
+@import "variables.scss";
+
 #positionTmpl {
     #hero-content {
         background-size: cover !important;
@@ -34,7 +36,7 @@
         width: 100%;
         .sec-container {
             width: 900px;
-            font: 16px/24px sans-serif;
+            font: 16px/24px $light;
         }
     }
 }
