stying to position template

--- a/css/careers/position.css
+++ b/css/careers/position.css
@@ -26,7 +26,8 @@
 #positionTmpl .job-description {
   width: 100%; }
   #positionTmpl .job-description .sec-container {
-    width: 900px;
-    font: 16px/24px FrutigerLTStd-Light; }
+    width: 900px; }
+    #positionTmpl .job-description .sec-container p {
+      font: 16px/24px FrutigerLTStd-Light; }
 
 /*# sourceMappingURL=position.css.map */
