--- a/css/careers/position.scss
+++ b/css/careers/position.scss
@@ -36,7 +36,7 @@
         width: 100%;
         .sec-container {
             width: 900px;
-            p {
+            p, li {
                 font: 16px/24px $light;
             }
         }
